--- a/HW3/client/src/App.css
+++ b/HW3/client/src/App.css
@@ -32,7 +32,7 @@ button {
   height: 50px;
   margin-top: 15px;
   font-size: 18px;
-  background-color: #4CAF50;
+  background-color: #66B3FF;
   color: white;
   border: none;
   border-radius: 4px;
@@ -41,7 +41,7 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #66B3FF;
 }
 
 .buyer {
